Fixed some formatting issues on mobile website.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,6 +1,15 @@
 html {
   font-family: "Copse", serif;
   color: #1B4B36;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 /* Header */
@@ -65,7 +74,8 @@ nav a {
 
 @media only screen and (max-width: 480px) {
   header {
-    width: 81%;
+    width: 87%;
+    position: static;
   }
 
   nav .desktop {
@@ -77,8 +87,8 @@ nav a {
   }
 
   header nav {
-    display: flex;
     width: 100%;
+    display: flex;
     justify-content: space-around;
   }
 }
@@ -149,9 +159,7 @@ nav a {
     flex-direction: column;
     align-items: flex-start;
     justify-content: none;
-    padding-top: 88px;
-    padding-left: 0;
-    padding-right: 0;
+    padding: 0;
     margin: 0;
   }
 
@@ -227,6 +235,7 @@ nav a {
   margin-top: 32px;
   margin-left: 32px;
   border-left: 5px solid black;
+  width: 40%;
 }
 
 .more-info-right .article {
@@ -436,6 +445,7 @@ nav a {
 .thesis-right {
   margin-left: 32px;
   border-left: 5px solid black;
+  width: 40%;
 }
 
 .thesis-right .article {
